@@ -1,4 +1,10 @@
 ===================
+v 6-0.641
+
+- Added String::fromInt() and String::fromDouble().
+
+
+===================
 2019/12/30 - 2020/1/5
 v 6-0.64
 
